# subdomain_scanner_educ

./: Cargo.toml  README.md
src/: error.rs  main.rs  subdomains.rs
